# RegDelta

./: .gitignore  Makefile  PROJECT.md  README.md  pyproject.toml
artifacts/: README.md
configs/: base.json
configs/profiles/: dev_cpu.json  onprem_1gpu.json  onprem_4gpu.json
data/: README.md
docs/: ARCHITECTURE.md
eval/: README.md  run_eval.py
pipelines/: regdelta_pipeline.json
scripts/: bootstrap.sh  run_pipeline.sh
src/regdelta/: __init__.py  cli.py  config.py  contract.py  pipeline.py
src/regdelta/eval/: __init__.py  harness.py
src/regdelta/stages/: __init__.py  generation.py  ingestion.py  packaging.py  processing.py  retrieval.py  verification.py
tests/: test_config.py  test_contract.py  test_eval_harness.py  test_generation_stage.py  test_ingestion_stage.py  test_packaging_stage.py  test_pipeline.py  test_processing_stage.py  test_retrieval_stage.py  test_stages.py  test_verification_stage.py
