[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "regdelta"
version = "0.1.0"
description = "On-prem LLM pipeline for Vietnamese regulatory change intelligence"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]

[project.scripts]
regdelta = "regdelta.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
